Add links to API for better exploration